src/index.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap");
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
  width: 100%;
  height: 100%;
  overflow-x: hidden;
  background-color: var(--primary-bg);
  
}

* {
  box-sizing: border-box;
}

body {
  margin-top: 50px;
  font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI",
    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
    "Helvetica Neue", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  
  
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

#root {
  width: 100%;
  height: 100%;
  --primary-bg: #f8f8f8;
  --secondary-bg: #9BBB63;
  --primary-text-color: #545190;
  --primary-text-inverted: #e3e1ff;
  --secondary-text-color: #20221B;
  --border-radius: 8px;
  --speed: 550ms;
  --border-color: #E88D67;
}

.primary-text-color {
  color: var(--primary-text-color);
}

.primary-text-inverted {
  color: var(--primary-text-inverted);
}

